--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -28,9 +28,9 @@
             android:layout_gravity="bottom"
             app:backgroundTint="@color/primary"
             app:buttonGravity="bottom|top"
+            app:fabAlignmentMode="center"
             app:menu="@menu/app_bar_menu"
             app:navigationIcon="@drawable/ic_menu">
-
         </com.google.android.material.bottomappbar.BottomAppBar>
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
@@ -38,7 +38,7 @@
             style="@style/fab_style"
             android:src="@drawable/ic_icon_qibla"
             app:backgroundTint="@color/yellow"
-            app:fabSize="normal"
+            app:fabSize="auto"
             app:layout_anchor="@id/bottom_app_bar" />
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
