--- a/app/src/main/res/layout/compass_fragment.xml
+++ b/app/src/main/res/layout/compass_fragment.xml
@@ -3,11 +3,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.compass.CompassFragment">
+    tools:context=".ui.fragments.compass.CompassFragment"
+    android:background="@color/background">
 
     <ImageView
         android:id="@+id/compass"
-        android:layout_centerInParent="true"
         android:src="@drawable/qaaba"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
