--- a/app/src/main/res/layout/name_fragment.xml
+++ b/app/src/main/res/layout/name_fragment.xml
@@ -3,7 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragments.name.NameFragment">
+    tools:context=".ui.fragments.name.NameFragment"
+    android:background="@color/background">
 
     <TextView
         android:layout_width="match_parent"
