--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -9,7 +9,9 @@
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/primary_dark</item>
-        <!-- Status bar color. -->
+        <item name="android:fontFamily">@font/font_work_sans</item>
+        <item name="fontFamily">@font/font_work_sans</item> <!-- target android sdk versions < 26 and > 14 if theme other than AppCompat -->
+         Status bar color.
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
 <!--        &lt;!&ndash; Customize your theme here. &ndash;&gt;-->
 <!--        <item name="shapeAppearanceLargeComponent">@style/ShapeAppearanceOverlay.Demo</item>-->
