--- a/app/src/main/res/drawable-v24/background_for_item_quran.xml
+++ b/app/src/main/res/drawable-v24/background_for_item_quran.xml
@@ -3,7 +3,8 @@
 
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-        <corners android:radius="20dp" />
-    <solid android:color="@color/primary" />
+        <corners android:radius="12dp" />
+    <solid android:color="@color/background" />
+
 </shape>
 
