--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -1,14 +1,170 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".ui.fragments.main.MainFragment"
     android:background="@color/background">
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/main_str" />
 
-</FrameLayout>
+    <TextView
+        android:id="@+id/time_zone_main"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="48dp"
+        android:text="@string/bishkek_string_def_value"
+        android:textSize="28sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/linear_namaz_time_item"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <androidx.appcompat.widget.LinearLayoutCompat
+        android:id="@+id/linear_namaz_time_item"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <androidx.appcompat.widget.LinearLayoutCompat
+            android:layout_width="300dp"
+            android:layout_height="match_parent"
+            android:layout_gravity="center"
+            android:background="@drawable/background_for_item_time"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:id="@+id/linear_white_back"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/item_tv_cons_time_namaz"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="16dp"
+                    android:layout_marginLeft="16dp"
+                    android:layout_marginTop="20dp"
+                    android:layout_weight="1"
+                    android:text="@string/constant_item_text_time"
+                    android:textColor="@color/yellow"
+                    android:textSize="18sp"
+                    android:textStyle="normal" />
+
+                <TextView
+                    android:id="@+id/item_tv_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="20dp"
+                    android:layout_weight="1"
+                    android:gravity="end"
+                    android:paddingRight="16dp"
+                    android:text="01.01.19"
+                    android:textColor="@color/yellow"
+                    android:textSize="18sp"
+                    android:textStyle="normal" />
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginLeft="16dp"
+                android:layout_marginTop="12dp"
+                android:layout_marginRight="16dp"
+                android:background="#80000000" />
+
+            <LinearLayout
+                android:id="@+id/bagymdat_linear"
+                style="@style/item_linear_for_time_namaz">
+
+                <TextView
+                    style="@style/item_tv_style_for_name_namaz"
+                    android:text="@string/def_bagymdat_text" />
+
+                <TextView
+                    android:id="@+id/item_tv_bagymdat_time"
+                    style="@style/item_tv_time_namaz"
+                    android:text="@string/item_bagymdat_def_time" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/sunrise_linear"
+                style="@style/item_linear_for_time_namaz">
+
+                <TextView
+                    style="@style/item_tv_style_for_name_namaz"
+                    android:text="@string/def_sunrise_text" />
+
+                <TextView
+                    android:id="@+id/item_tv_sunris_time"
+                    style="@style/item_tv_time_namaz"
+                    android:text="@string/item_bagymdat_def_time" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/peshim_linear"
+                style="@style/item_linear_for_time_namaz">
+
+                <TextView
+                    style="@style/item_tv_style_for_name_namaz"
+                    android:text="@string/def_peshim_text" />
+
+                <TextView
+                    android:id="@+id/item_tv_peshim_time"
+                    style="@style/item_tv_time_namaz"
+                    android:text="@string/item_bagymdat_def_time" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/asr_linear"
+                style="@style/item_linear_for_time_namaz">
+
+                <TextView
+                    style="@style/item_tv_style_for_name_namaz"
+                    android:text="@string/def_asr_text" />
+
+                <TextView
+                    android:id="@+id/item_tv_asr_time"
+                    style="@style/item_tv_time_namaz"
+                    android:text="@string/item_bagymdat_def_time" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/magrib_linear"
+                style="@style/item_linear_for_time_namaz">
+
+                <TextView
+                    style="@style/item_tv_style_for_name_namaz"
+                    android:text="@string/def_magrib_text" />
+
+                <TextView
+                    android:id="@+id/item_tv_magrib_time"
+                    style="@style/item_tv_time_namaz"
+                    android:text="@string/item_bagymdat_def_time" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:id="@+id/isha_linear"
+                style="@style/item_linear_for_time_namaz"
+                android:layout_marginBottom="32dp">
+
+                <TextView
+                    style="@style/item_tv_style_for_name_namaz"
+                    android:text="@string/def_isha_text" />
+
+                <TextView
+                    android:id="@+id/item_tv_isha_time"
+                    style="@style/item_tv_time_namaz"
+                    android:text="@string/item_bagymdat_def_time" />
+            </LinearLayout>
+
+
+        </androidx.appcompat.widget.LinearLayoutCompat>
+
+    </androidx.appcompat.widget.LinearLayoutCompat>
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
