--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="activity_margin">12dp</dimen>
+    <dimen name="margin_normal">16dp</dimen>
+    <dimen name="margin_large">34dp</dimen>
+    <dimen name="small_margin">4dp</dimen>
+    <dimen name="text_size_normal">24sp</dimen>
+    <dimen name="text_size_large">32sp</dimen>
+    <dimen name="_12">12dp</dimen>
+
 </resources>
