--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -54,27 +54,45 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
         <item name="android:gravity">right</item>
-        <item name="android:paddingRight">30dp</item>
-        <item name="android:textColor">@color/black_color_for_text_time</item>
-        <item name="android:textSize">24sp</item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:paddingRight">@dimen/margin_normal</item>
+        <item name="android:textColor">@color/background_text_white</item>
+        <item name="android:textSize">@dimen/text_size_normal</item>
+        <item name="android:textStyle">normal</item>
     </style>
 
     <style name="item_tv_style_for_name_namaz">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:textColor">@color/black_color_for_text_time</item>
-        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">@color/background_text_white</item>
+        <item name="android:textSize">@dimen/text_size_normal</item>
         <item name="android:textStyle">bold</item>
     </style>
 
     <style name="item_linear_for_time_namaz">
         <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginStart">16dp</item>
-        <item name="android:layout_marginLeft">16dp</item>
-        <item name="android:layout_marginTop">16dp</item>
+        <item name="android:layout_marginStart">@dimen/margin_normal</item>
+        <item name="android:layout_marginLeft">@dimen/margin_normal</item>
+        <item name="android:layout_marginTop">@dimen/margin_normal</item>
         <item name="android:orientation">horizontal</item>
+    </style>
+
+    <style name="text_sura_style">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:layout_marginTop">@dimen/margin_normal</item>
+        <item name="android:layout_marginBottom">@dimen/margin_normal</item>
+        <item name="android:textSize">@dimen/text_size_normal</item>
+    </style>
+
+    <style name="style_card_view_item">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_marginLeft">@dimen/small_margin</item>
+        <item name="android:layout_marginTop">2dp</item>
+        <item name="android:background">@color/background</item>
+        <item name="android:layout_marginRight">@dimen/small_margin</item>
+        <item name="android:layout_height">wrap_content</item>
     </style>
 </resources>
