--- a/app/src/main/res/layout/detail_ayat_fragment.xml
+++ b/app/src/main/res/layout/detail_ayat_fragment.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/background"
-    tools:context=".ui.fragments.detailayat.DetailAyatFragment">
+    tools:context=".ui.fragments.detail_ayat.DetailAyatFragment">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rec_view_detail_sura"
