--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -81,7 +81,11 @@
         tools:layout="@layout/compass_fragment" />
     <fragment
         android:id="@+id/detailAyatFragment"
-        android:name="com.kg.malikov.mukminapp.ui.fragments.detailayat.DetailAyatFragment"
+        android:name="com.kg.malikov.mukminapp.ui.fragments.detail_ayat.DetailAyatFragment"
         android:label="detail_ayat_fragment"
         tools:layout="@layout/detail_ayat_fragment" />
+    <fragment
+        android:id="@+id/detailNameFragment"
+        android:name="com.kg.malikov.mukminapp.ui.fragments.detail_name.DetailNameFragment"
+        android:label="DetailNameFragment" />
 </navigation>
