--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -5,7 +5,8 @@
     <dimen name="margin_large">34dp</dimen>
     <dimen name="small_margin">4dp</dimen>
     <dimen name="text_size_normal">24sp</dimen>
-    <dimen name="text_size_large">32sp</dimen>
+    <dimen name="text_size">18sp</dimen>
+    <dimen name="text_size_large">28sp</dimen>
     <dimen name="_12">12dp</dimen>
 
 </resources>
