--- a/app/src/main/res/layout/quran_fragment.xml
+++ b/app/src/main/res/layout/quran_fragment.xml
@@ -7,6 +7,11 @@
     tools:context=".ui.fragments.quran.QuranFragment"
     android:background="@color/background">
 
+    <ProgressBar
+        android:id="@+id/progress_bar_loading"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rec_view_sura_in_quran"
         android:layout_width="0dp"
