--- a/app/src/main/res/drawable/background_for_bottom_sheet.xml
+++ b/app/src/main/res/drawable/background_for_bottom_sheet.xml
@@ -4,8 +4,7 @@
 
     <item>
         <shape android:shape="rectangle">
-            <corners
-          android:radius="12dp" />
+            <corners android:radius="12dp" />
             <solid android:color="@color/primary_dark" />
 
         </shape>
@@ -13,8 +12,7 @@
 
     <item android:top="20dp">
         <shape android:shape="rectangle">
-            <corners
-               android:radius="12dp" />
+            <corners android:radius="12dp" />
             <solid android:color="@color/primary_light" />
         </shape>
     </item>
