--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,12 +10,14 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/primary_dark</item>
         <item name="android:fontFamily">@font/font_work_sans</item>
-        <item name="fontFamily">@font/font_work_sans</item> <!-- target android sdk versions < 26 and > 14 if theme other than AppCompat -->
-         Status bar color.
+        <item name="fontFamily">@font/font_work_sans
+        </item> <!-- target android sdk versions < 26 and > 14 if theme other than AppCompat -->
+        Status bar color.
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-<!--        &lt;!&ndash; Customize your theme here. &ndash;&gt;-->
-<!--        <item name="shapeAppearanceLargeComponent">@style/ShapeAppearanceOverlay.Demo</item>-->
+        <!--        &lt;!&ndash; Customize your theme here. &ndash;&gt;-->
+        <!--        <item name="shapeAppearanceLargeComponent">@style/ShapeAppearanceOverlay.Demo</item>-->
     </style>
+
     <style name="Theme.NamazTime.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
 </resources>
